kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asyncforge-ingress
  annotations:
    # If using the NGINX Ingress Controller on kind
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: localhost # You can also map a custom domain in your /etc/hosts like asyncforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
